# inttrest

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mongo_connector.py  prompt.xml  pyproject.toml  repomix-output.xml  requirements.txt  save_events.py  sitemap.xml  test_mongo.py
.qwen/: settings.json
ai/vercel_ai_sdk/: index.html
api/endpoints/: index.html
architecture/overview/: index.html
components/frontend/: index.html
components/geocoder/: index.html
components/mongo_connector/: index.html
event_discovery_app/: .env.example  README.md  pyproject.toml  run_dev.py  setup_and_run.py
event_discovery_app/app/: __init__.py  main.py
event_discovery_app/app/api/routes/: events.py  maps.py
event_discovery_app/app/core/: config.py  database.py
event_discovery_app/app/services/: __init__.py  base_scraper.py  eventbrite_scraper.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  repomix-output.xml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/events/: route.ts
frontend/app/api/events/[id]/: route.ts
frontend/app/api/mcp/: route.ts
frontend/components/: Chat.tsx  Map.tsx
frontend/hooks/: useEvents.ts
frontend/lib/mongodb/: connection.ts
frontend/lib/repositories/: events.repository.ts
frontend/lib/types/: event.ts
frontend/lib/validation/: event.validation.ts
mcp/eventbrite/: index.html
mcp/instagram/: index.html
mcp/linkedin/: index.html
mcp/meetup/: index.html
mcp/overview/: index.html
mcp_servers/: unified_server.py
mcp_servers/mcp-meetup/: .env.example  .gitignore  LICENSE  README.md  README_FIXED.md  meetup_claude_mcp_server.py  meetup_claude_mcp_server_fixed.py  requirements.txt  requirements_fixed.txt
mcp_servers/mcp-meetup/docs/adr/: 001-mcp-protocol-choice.md  002-dual-api-strategy.md  003-natural-language-extraction.md  004-error-handling-strategy.md  005-official-sdk-migration.md
mcp_servers/mcp-meetup/tests/: test_meetup_server.py  test_meetup_server_fixed.py
search/: search_index.json
setup/colleague_access/: index.html
setup/installation/: index.html
